@@ -21,6 +21,10 @@
 - Changed ``supervisorctl`` to reuse the server proxy object between commands
   to reduce the number of open connections.  Patch by Zev Benjamin.
 
+- Fixed a bug in Medusa where the HTTP Basic authorizer would cause an
+  exception if the password contained a colon.  Thanks to Thomas Guttler
+  for reporting this issue.
+
 3.0 (2013-07-30)
 ----------------
 
